--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -15,12 +15,12 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v3
+    - uses: actions/checkout@v2
     - name: Set up JDK 11
-      uses: actions/setup-java@v3
+      uses: actions/setup-java@v2
       with:
-        java-version: '11.0.*'
-        distribution: 'temurin'
+        java-version: '11'
+        distribution: 'adopt'
         cache: gradle
     - name: Run Tests
       run: ./gradlew test
@@ -31,21 +31,22 @@ jobs:
     runs-on: ubuntu-latest
     
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v2
       - name: Set up JDK 11
-        uses: actions/setup-java@v3
+        uses: actions/setup-java@v2
         with:
-          java-version: '11.0.*'
-          distribution: 'temurin'
+          java-version: '11'
+          distribution: 'adopt'
           cache: gradle
       - name: Grant execute permission for gradlew
         run: chmod +x gradlew
       - name: Build with Gradle
         run: ./gradlew build
+        
       - name: Build and push docker image
-        uses: mr-smithers-excellent/docker-build-push@v6.1
+        uses: mr-smithers-excellent/docker-build-push@v5
         with:
           image: livejosa/docker-demo-app-ga-version
           registry: docker.io
-          username: ${{secrets.DOCKER_USERNAME}}
-          password: ${{secrets.DOCKER_PASSWORD}}
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
